Fix short description not showing on spell sheets

--- a/less/misc.less
+++ b/less/misc.less
@@ -231,5 +231,5 @@ input.text-box {
   border-radius: 3px;
   border: @borderLightThin;
   padding: 2px;
-  margin: 0.75em;
+  margin: 0.75em 0;
 }
